--- a/assets/style/buttons.css
+++ b/assets/style/buttons.css
@@ -5,7 +5,7 @@
     font-size: 14.263px;
     font-style: normal;
     font-weight: 700;
-    line-height: 160%;
+    line-height: 100%;
 
     /* Стили самой кнопки */
     background-color: black;
@@ -15,8 +15,8 @@
     box-shadow: 6.1125px 6.1125px 0px 0px rgba(0, 0, 0, 0.25);
 
     padding: 20.375px 36.675px;
-    width: 50px;
-    margin: 40px auto 0;
+    width: 70px;
+    margin: 30px auto 0;
 
     display: block;
     justify-content: center;
@@ -32,7 +32,7 @@
     font-size: 14px;
     font-style: normal;
     font-weight: 700;
-    line-height: 160%;
+    line-height: 100%;
     /* Стили самой кнопки */
     border-radius: 8px;
     border: 2px solid var(--Black, #000);
@@ -41,7 +41,7 @@
 
     padding: 20px 36px;
     width: 174px;
-    margin: 40px auto 0;
+    margin: 30px auto 0;
 
     display: block;
     justify-content: center;
@@ -59,10 +59,11 @@
     line-height: 160%;
 
     /* Позиционирование напрямую зависит от width и margin*/
-    margin: 0 auto;
-    width: 379.994px;
+    margin: 15px;
+    width: 650px;
     color: var(--Black, #000);
-
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .postInputForm input,
