--- a/assets/style/windows.css
+++ b/assets/style/windows.css
@@ -1,7 +1,7 @@
 .window {
 
     margin-top: 50px;
-    
+
     border-radius: 8px;
     border: 2px solid var(--Black, #000);
     background: #FFF;
@@ -23,7 +23,8 @@
     font-size: 36.65px;
     font-style: normal;
     font-weight: 700;
-    line-height: 100%; /* 36.65px */
+    line-height: 100%;
+    /* 36.65px */
     letter-spacing: -0.733px;
 }
 
@@ -151,15 +152,124 @@ select {
 }
 
 .window img {
-    
+
     display: block;
     width: 480.362px;
-    
+
     margin: 5px auto;
 }
 
 
-input:focus, select:focus{
-  outline:solid  #CD4631;
-  outline-width: 1px;
+input:focus,
+select:focus {
+    outline: solid #CD4631;
+    outline-width: 1px;
+}
+
+
+
+
+
+.notifications {
+    width: 538px;
+    height: 409px;
+
+}
+
+
+.notification {
+    border-radius: 5.088px;
+    border: 0.848px solid var(--Black, #000);
+    background: #F7EDE8;
+    margin: 5px auto 0px;
+    width: 438px;
+    height: 78px;
+    flex-shrink: 0;
+}
+
+.bar {
+    display: flex;
+
+
+    margin-left: 17px;
+    margin-right: 38px;
+}
+
+.bar>.bell {
+    width: 35.9px;
+    margin-left: auto;
+    margin-right: 0;
+}
+
+
+
+.notification h3 {
+    display: inline-block;
+    width: 230px;
+    margin-left: 5px;
+    color: var(--Vermillion, #CD4631);
+    font-family: Montserrat Alternates;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 140%;
+    /* 21px */
+    letter-spacing: -0.3px;
+
+    text-align: center;
+}
+
+.notification>img {
+    margin: -18px auto 0 6px;
+    width: 167px;
+    stroke-width: 0.212px;
+    stroke: var(--Davys-Grey, #4D4D4D);
+}
+
+
+.notification-title {
+    display: flex;
+    width: 50%;
+}
+
+.notification-title img {
+    margin-top: 16px;
+    width: 15.621px;
+    height: 15.621px;
+    flex-shrink: 0;
+
+}
+
+.starbox>p {
+
+
+    color: var(--Black, #000);
+    text-align: center;
+    font-family: Montserrat Alternates;
+    font-size: 18.039px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 160%;
+
+    margin: 10px 0;
+}
+
+.starbox {
+    display: flex;
+}
+
+.notification>p {
+
+    color: var(--Davys-Grey, #4D4D4D);
+    font-family: Montserrat Alternates;
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 160%;
+    
+    width: 400px ;
+    height: 33px;
+    
+    margin: 5px auto auto;
+
 }
