--- a/assets/style/mainpage/services.css
+++ b/assets/style/mainpage/services.css
@@ -86,6 +86,7 @@
 
 .services_table {
     width: 70%;
+    max-width: max-content;
     margin: 50px auto;
 
 }
@@ -102,4 +103,8 @@
     display: flex;
     flex-basis: 681px;
 
+}
+
+.flex-item {
+    margin-left: 20px;
 }
