--- a/assets/style/profile.css
+++ b/assets/style/profile.css
@@ -23,6 +23,16 @@
 
 }
 
+header .profile_photo_header img{ 
+    width: 43px;
+    height: 43px;
+
+    border-radius: 5px;
+    border: solid #000 2px;
+    margin-top: 6px;
+}
+
+
 .profile_photo {
     width: 472px;
     height: 472px;
