fixed select tags from index.html add sendRegistration js

--- a/assets/style/mainpage/registration.css
+++ b/assets/style/mainpage/registration.css
@@ -134,6 +134,12 @@
     text-align: center;
 }
 
+
+.blackButton:active {
+    border: solid wheat 100px;
+  }
+
+
 #login .blackButton {
     /* Стили для надписи */
     color: #FFF;
